<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlusOneFragment">

    <!--com.google.android.gms.plus.PlusOneButton xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
        android:id="@+id/plus_one_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        plus:annotation="inline"
        plus:size="standard" /-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/screen1"
        android:src="@drawable/loginscreen"
        android:scaleType="fitXY"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal|top" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:text="@string/special_offers"
            android:id="@+id/sofferButton"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/roundshapebtn"
            android:layout_marginTop="90sp"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal|top" />

        <Button
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:text="@string/saved_order"
            android:id="@+id/sorderButton"
            android:background="@drawable/roundshapebtn"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:text="@string/built_order"
            android:id="@+id/borderButton"
            android:background="@drawable/roundshapebtn"
            android:textColor="#ffffff"
            android:layout_marginTop="50sp"
            android:layout_gravity="center"
            android:layout_marginBottom="85dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</FrameLayout>
