<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="in.kumar.krish.restaurantapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/splashScreen"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/splashscreen"
        android:scaleType="fitXY"
        android:alpha="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loginScreen"
        android:src="@drawable/loginscreen"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:alpha="0"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Welcome"
        android:id="@+id/welcomeText"
        android:layout_marginTop="131dp"
        android:textColor="#ffffff"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:alpha="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailText"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/email_address"
        android:contextClickable="false"
        android:alpha="0"
        android:background="@drawable/roundshapebtn"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordText"
        android:text="@string/password"
        android:layout_below="@+id/emailText"
        android:layout_alignLeft="@+id/emailText"
        android:layout_alignStart="@+id/emailText"
        android:layout_marginTop="44dp"
        android:background="@drawable/roundshapebtn"
        android:alpha="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/Loginbutton"
        android:layout_below="@+id/passwordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:alpha="0"
        android:background="@drawable/roundshapebtn"
        android:textColor="#ffffff" />

</RelativeLayout>
